mongo-express-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
      tier: frontend
  template:
    metadata:
      labels:
        app: mongo-express
        tier: frontend
    spec:
      containers:
        - name: mongo-express-container
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
    tier: frontend
  # type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
#      nodePort: 30000
