grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - default/mongoes-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    # rewrite:
    #   uri: /

    # - uri:
    #     regex: '^.*\.(ico|svg|js)$'
    
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
