mongo-express-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mongoes-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mongoes-vs
spec:
  hosts:
  - "*"
  gateways:
  - mongoes-gateway
  http:
  - match:
    - uri:
        prefix: /db
    route:
    - destination:
        host: mongo-express-service
        port:
          number: 8081
